# ProjectFantasy

./: '  .gitignore  Cargo.toml  README.md  compile_shaders.sh  vulkan_arch.dot
data/: frag.spv  shader.frag.spv  shader.vert.spv
resources/: shader.frag  shader.vert
src/: graphics.rs  grid_sweep.rs  main.rs  world.rs
src/graphics/: interface.rs
