[package]
name = "triangle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
vulkano = "0.29.0"
vulkano-win = "0.29.0"
vulkano-shaders = "0.29.0"
bytemuck = "1.9.1"
winit = "0.26.1"
glam = "0.20.5"
image = "0.24.2"

